src/components/landing-page/landing-page.css
.landing h1 {
	font-size: 8em;
	color: rgb(46, 148, 155);
  margin: 60px 10px 10px 10%;
  text-align: start;
	padding: 0;
  font-family: 'Righteous', cursive;
}

.landing > h2 {
  color: #eee;;
  font-size: 40px;
  margin: -112px 0 20px 10%;
  width: 480px;
  padding: 100px 20px  20px 60px;
}

.desc-block {
  display: flex;
  align-items: center;
  justify-content: space-around;
  text-align: center;
  margin: 30px auto;
}

.desc-item {
  text-align: center;
}

.desc-item > .fas {
  font-size: 75px;
  color: #bbb;
  border-bottom: solid 1px rgb(46, 148, 155);
  padding: 10%;
}

.desc-item p {
  color: #ccc;
  font-weight: lighter;
  align-items: center;
  justify-content: space-around;
  text-align: center;
  width: 230px;
}

.landing > button {
  position: absolute;
  top: 0;
  right: 20px;
  width: 120px!important;
  font-size: 20px!important;
}

button:hover {
  background: #111;
	color: rgb(46, 148, 155);
  cursor: pointer;
}

@media only screen and (max-width: 1024px) {
  .landing {
    margin: 30px auto;
    width: 90%;
  }
}

/* Medium devices (phones, 800px and down) */
@media only screen and (max-width: 800px) {

  .desc-item {
    width: 95%;
  }

}


/* Small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .landing h1 {
    font-size: 20vw;
    margin: 60px auto 20px 30px;
  }


  .landing > h2 {
    font-size: 7vw;
    margin: -30px auto 0 50px;
    padding: 0;
  }

  .desc-block {
    width: 95%;
    display: block;
  }

  .desc-item p {
    margin: auto;
  }

}


/* Small devices (phones, 400px and down) */
@media only screen and (max-width: 420px) {
  .landing h1 {
    font-size: 20vw;
    margin: 80px auto 25px 30px;
  }

  .desc-block {
    width: 90%;
  }

  .desc-item > .fas {
    font-size: 50px;
  }

}

